Bug Fix + Slight UI Animation Improvement
- Fixed bug that caused part select menu to keep open when a group is
selected
- Fixed bug that caused color picker to be hidden behind an open select
menu (now it moves into view)
- Added fade in/out to layer control UI

--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,39 @@ white { color: white; }
 .img-no-highlight {
     margin: 2px;
 }
+
+.fade {
+      -moz-animation-name: fadeIn;
+      -webkit-animation-name: fadeIn;
+      -ms-animation-name: fadeIn;
+      animation-name: fadeIn;
+      -moz-animation-duration: 0.15s;
+      -webkit-animation-duration: 0.15s;
+      -ms-animation-duration: 0.15s;
+      animation-duration: 0.15s;
+      -moz-animation-timing-function: ease-in-out;
+      -webkit-animation-timing-function: ease-in-out;
+      -ms-animation-timing-function: ease-in-out;
+      animation-timing-function: ease-in-out;
+      -moz-animation-fill-mode: forwards;
+      -webkit-animation-fill-mode: forwards;
+      -ms-animation-fill-mode: forwards;
+      animation-fill-mode: forwards;  
+    }
+
+    .fade.fadeOut {
+      -moz-animation-name: fadeOut;
+      -webkit-animation-name: fadeOut;
+      -ms-animation-name: fadeOut;
+      animation-name: fadeOut;
+    }
+
+    @-moz-keyframes fadeIn { 0% { opacity: 0; visibility: hidden; } 100% { opacity: 1; visibility: visible; }}
+    @-webkit-keyframes fadeIn { 0% { opacity: 0; visibility: hidden; } 100% { opacity: 1; visibility: visible; }}
+    @-ms-keyframes fadeIn { 0% { opacity: 0; visibility: hidden; } 100% { opacity: 1; visibility: visible; }}
+    @-keyframes fadeIn { 0% { opacity: 0; visibility: hidden; } 100% { opacity: 1; visibility: visible; }}
+
+    @-moz-keyframes fadeOut { 0% { opacity: 1; visibility: visible; }  100% { opacity: 0; visibility: hidden; }} 
+    @-webkit-keyframes fadeOut { 0% { opacity: 1; visibility: visible; }  100% { opacity: 0; visibility: hidden; }} 
+    @-ms-keyframes fadeOut { 0% { opacity: 1; visibility: visible; } 100% { opacity: 0; visibility: hidden; }} 
+    @-keyframes fadeOut { 0% { opacity: 1; visibility: visible; } 100% { opacity: 0; visibility: hidden;  }} 
